# PyPrinter

./: .gitignore  LICENSE  README.md  geradanfce.sh  install.sh  pyproject.toml  requirements.txt  requirements_client.txt  server.py
.github/workflows/: ci.yaml
controllers/: conversor_controller.py  coupon_controller.py  document_controller.py  image_controller.py  text_controller.py
docs/: 32210534971421000262650010000011211121100000-nfce.xml
pyprinter/: __main__.py  app.py  config.py
pyprinter/controllers/: conversor_controller.py  coupon_controller.py  coupon_image.py  document_controller.py  image_controller.py  text_controller.py
pyprinter/routes/: printer_routes.py
pyprinter/templates/: home.html
routes/: printer_routes.py
src/: 32231214810601000174650010000001571751000004-nfce.xml
